/**
 * @author Bartłomiej Gładys
 * @date 27/02/2019
 * @version 1.0
 */

public class Main {

    public static void main(String[] args) {
        new Checker();
        System.out.println("Hello World!");
    }
}
