/**
 * @author Bartłomiej Gładys
 * @date 27/02/2019
 * @version 1.0
 */

class MoveException extends Exception {

    MoveException(String message) {
        super(message);
    }
}
